New test file for border and padding shorthand
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194130 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/examples/build.xml
+++ b/docs/examples/build.xml
@@ -59,6 +59,8 @@
     <fop fofile="${foDir}/hyphen.fo" pdffile="${testDir}/hyphen.pdf"/>
     <fop fofile="${foDir}/character.fo" pdffile="${testDir}/character.pdf"/>
     <fop fofile="${foDir}/pdfoutline.fo" pdffile="${testDir}/pdfoutline.pdf"/>
+    <fop fofile="${foDir}/corresprop.fo" pdffile="${testDir}/corresprop.pdf"/>
+    <fop fofile="${foDir}/bordershorthand.fo" pdffile="${testDir}/bordershorthand.pdf"/>
   </target>
 
 
