Fixed basic-link horizontal position with justification turned on. PR: 953 Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194179 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/examples/build.xml
+++ b/docs/examples/build.xml
@@ -46,6 +46,7 @@
     <fop fofile="${foDir}/table.fo"  pdffile="${testDir}/table.pdf"/>
     <fop fofile="${foDir}/list.fo"   pdffile="${testDir}/list.pdf"/>
     <fop fofile="${foDir}/link.fo"   pdffile="${testDir}/link.pdf"/> 
+    <fop fofile="${foDir}/newlinktest.fo" pdffile="${testDir}/newlinktest.pdf"/>
     <fop fofile="${foDir}/border.fo"   pdffile="${testDir}/border.pdf"/> 
     <fop fofile="${foDir}/extensive.fo"   pdffile="${testDir}/extensive.pdf"/> 
     <fop fofile="${foDir}/images.fo"   pdffile="${testDir}/images.pdf"/> 
@@ -85,6 +86,7 @@
     <fop fofile="${foDir}/table.fo"  pdffile="${referenceDir}/table.pdf"/>
     <fop fofile="${foDir}/list.fo"   pdffile="${referenceDir}/list.pdf"/>
     <fop fofile="${foDir}/link.fo"   pdffile="${referenceDir}/link.pdf"/>
+    <fop fofile="${foDir}/newlinktest.fo"   pdffile="${referenceDir}/newlinktest.pdf"/>
     <fop fofile="${foDir}/border.fo"   pdffile="${referenceDir}/border.pdf"/>
     <fop fofile="${foDir}/extensive.fo"   pdffile="${referenceDir}/extensive.pdf"/>
     <fop fofile="${foDir}/images.fo"   pdffile="${referenceDir}/images.pdf"/>
