added missing hyph directory to src dist PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194181 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -144,6 +144,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
        <include name="src/**"/>
        <include name="conf/**"/>
        <include name="docs/**"/>
+       <include name="hyph/**"/>
        <include name="lib/**"/>
        <include name="CHANGES"/>
        <include name="LICENSE"/>
