Updated version to reflect that builds from this are a CVS version in the next release (0.19.0-CVS) PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194198 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -162,7 +162,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
     <tstamp/>
     <property name="Name" value="Fop"/>
     <property name="name" value="fop"/>
-    <property name="version" value="0.18.1-DEV"/>
+    <property name="version" value="0.19.0-CVS"/>
     <filter  token="version" value="${version}"/>
     <property name="year" value="1999-2001"/>
 
