deletes the correct dir when clean
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194298 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/examples/build.xml
+++ b/docs/examples/build.xml
@@ -116,7 +116,7 @@
   <!-- Clean targets                                                       -->
   <!-- =================================================================== -->
   <target name="clean" depends="init">
-    <deltree dir="${build.dir}"/>
+    <delete dir="${testDir}"/>
     
   </target>
 
